DTSCCI-5038 import defs and add roles done through the correct pipeline stage now.